--- a/styles/style.css
+++ b/styles/style.css
@@ -60,3 +60,21 @@ body {
     transform: scale(1.2);
     box-shadow: 0 0 3px rgba(0, 0, 0, 0.95);
 }
+.sizes {
+    position: fixed;
+    right: 20px;
+    top: 32px;
+}
+.sizes > li {
+    margin: 20px 0;
+}
+.sizes > .thin {
+    height: 0;
+    width: 20px;
+    border-top: 3px solid black;
+}
+.sizes > .thick {
+    height: 0;
+    width: 20px;
+    border-top: 6px solid black;
+}
