--- a/styles/style.css
+++ b/styles/style.css
@@ -7,6 +7,10 @@ ul, ol {
 }
 #xxx {
     display: block;
+    background: white;
+    position: fixed;
+    top: 0;
+    left: 0;
 }
 .icon {
     width: 1em; height: 1em;
